--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@types/styled-components": "^5.1.26"
   }
 }
